; (executables
;  (name main)
;  (public_name load_test)
;  (libraries eio_main ezcurl cohttp-eio)
;  (flags (:standard -w -32)) ; unused value warning
; )

(executable
 (name client_tls)
 (public_name load_test)
 (libraries
 cohttp-eio
 eio_main
 eio.unix
 fmt
 unix
 logs.fmt
 logs.threaded
 tls-eio
 ca-certs
 mirage-crypto-rng-eio))