(executable
 (name main)
 (public_name load_test)
 (libraries eio_main ezcurl cohttp-eio)
)

(executable
 (name client_tls)
 (libraries
 cohttp-eio
 eio_main
 eio.unix
 fmt
 unix
 logs.fmt
 logs.threaded
 tls-eio
 ca-certs
 mirage-crypto-rng-eio)
 )

(executable
 (name client_piaf)
 (libraries
 eio_main
 piaf)
 )

(env
 (myprofile
 (flags
  (:standard -w -21) ; unsound type
  (:standard -w -26) ; unused var
  (:standard -w -32) ; unused value
  (:standard -w -33))
 ))